--- a/libs/Reflection_Core/tests/CMakeLists.txt
+++ b/libs/Reflection_Core/tests/CMakeLists.txt
@@ -37,3 +37,4 @@ addReflection_CoreTest("FieldTest")
 addReflection_CoreTest("StructTest")
 addReflection_CoreTest("PrimaryKeyTest")
 addReflection_CoreTest("UniqueConstraintTest")
+addReflection_CoreTest("RelationTest")
