--- a/libs/Sql_Reflection/tests/CMakeLists.txt
+++ b/libs/Sql_Reflection/tests/CMakeLists.txt
@@ -31,4 +31,5 @@ addSql_ReflectionTest("SchemaFieldTest")
 addSql_ReflectionTest("SchemaPrimaryKeyTest")
 addSql_ReflectionTest("SchemaTableTest")
 addSql_ReflectionTest("SchemaUniqueIndexTest")
+addSql_ReflectionTest("SchemaForeignKeyTest")
 addSql_ReflectionTest("ReflectionTest")
