--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -100,6 +100,7 @@ addSqlCoreTest("ExpressionTest")
 addSqlCoreTest("SelectStatementTest")
 addSqlCoreTest("ConnectionParametersTest")
 addSqlCoreTest("QueryTest")
+addSqlCoreTest("QueryBenchmark")
 addSqlCoreTest("AsyncQueryTest")
 addSqlCoreTest("AsyncQueryBenchmark")
 addSqlCoreTest("SchemaFieldTypeMapTest")
