Sql Reflection: +insertStatementFromReflected()

--- a/libs/Sql_Reflection/tests/CMakeLists.txt
+++ b/libs/Sql_Reflection/tests/CMakeLists.txt
@@ -33,3 +33,4 @@ addSql_ReflectionTest("SchemaTableTest")
 addSql_ReflectionTest("SchemaUniqueIndexTest")
 addSql_ReflectionTest("SchemaForeignKeyTest")
 addSql_ReflectionTest("ReflectionTest")
+addSql_ReflectionTest("QueryStatementTest")
