Sql Reflection: implement PrimaryKeyRecordAlgorithm

--- a/libs/Reflection_Core/src/CMakeLists.txt
+++ b/libs/Reflection_Core/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
   Mdt/Reflection/TypeTraits/IsStructDefAssociatedWithReflectedStruct.cpp
   Mdt/Reflection/TypeTraits/IsFieldAssociatedWithReflectedStruct.cpp
   Mdt/Reflection/TypeTraits/IsFieldStructDefAssociatedWithPrimaryKey.cpp
+  Mdt/Reflection/TypeTraits/IsReflectedStructAssociatedWithPrimaryKey.cpp
   Mdt/Reflection/TypeTraits/IsPrimaryKey.cpp
   Mdt/Reflection/TypeTraits/IsAutoIncrementIdPrimaryKey.cpp
   Mdt/Reflection/TypeTraits/IsIdPrimaryKey.cpp
