Sql Reflection: implement UpdateStatement

--- a/libs/Sql_Reflection/src/CMakeLists.txt
+++ b/libs/Sql_Reflection/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCE_FILES
   Mdt/Sql/Reflection/PrimaryKeyRecordAlgorithm.cpp
   Mdt/Sql/Reflection/InsertStatement.cpp
   Mdt/Sql/Reflection/DeleteStatement.cpp
+  Mdt/Sql/Reflection/UpdateStatement.cpp
 )
 
 find_package(Qt5 COMPONENTS Sql)
