--- a/libs/QueryExpression_Core/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Core/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ addQueryExpression_CoreTest("JoinClauseTest")
 addQueryExpression_CoreTest("SelectStatementTest")
 addQueryExpression_CoreTest("SelectStatementBenchmark")
 addQueryExpression_CoreTest("SelectQueryTest")
+addQueryExpression_CoreTest("QueryFieldTest")
 addQueryExpression_CoreTest("SelectFieldTest")
 addQueryExpression_CoreTest("SelectFieldListTest")
 addQueryExpression_CoreTest("LikeExpressionTest")
