Sql: migrate to QueryExpression based API

--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -97,8 +97,11 @@ addSqlCoreTest("ExpressionTest")
 # addSqlCoreTest("JoinConstraintTest")
 # addSqlCoreTest("JoinClauseTest")
 # addSqlCoreTest("FromClauseTest")
+addSqlCoreTest("StatementAlgorithmTest")
 addSqlCoreTest("SelectStatementTest")
 addSqlCoreTest("ConnectionParametersTest")
+addSqlCoreTest("QueryExpressionSqlTransformTest")
+addSqlCoreTest("QueryExpressionSqlTransformBenchmark")
 addSqlCoreTest("QueryTest")
 addSqlCoreTest("QueryBenchmark")
 addSqlCoreTest("AsyncQueryTest")
