--- a/libs/Reflection_Core/tests/CMakeLists.txt
+++ b/libs/Reflection_Core/tests/CMakeLists.txt
@@ -34,5 +34,6 @@ addReflection_CoreTest("FieldAttributesTest")
 addReflection_CoreTest("FieldTest")
 addReflection_CoreTest("StructTest")
 addReflection_CoreTest("PrimaryKeyTest")
+addReflection_CoreTest("PrimaryKeyRecordTest")
 addReflection_CoreTest("UniqueConstraintTest")
 addReflection_CoreTest("RelationTest")
