Sql: implement ReflectionStorageTableWithId + experiments on statements

--- a/libs/Sql_Reflection/tests/CMakeLists.txt
+++ b/libs/Sql_Reflection/tests/CMakeLists.txt
@@ -35,3 +35,4 @@ addSql_ReflectionTest("SchemaForeignKeyTest")
 addSql_ReflectionTest("ReflectionTest")
 addSql_ReflectionTest("PrimaryKeyRecordAlgorithmTest")
 addSql_ReflectionTest("QueryStatementTest")
+addSql_ReflectionTest("StorageTableTest")
