--- a/libs/QueryExpression_Reflection/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Reflection/tests/CMakeLists.txt
@@ -29,3 +29,4 @@ endfunction()
 
 addQueryExpression_ReflectionTest("QueryFieldTest")
 addQueryExpression_ReflectionTest("SelectStatementTest")
+addQueryExpression_ReflectionTest("PrimaryKeyAlgorithmTest")
