CMakeLists.txt: +some libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,7 @@ endif()
 #################################################################################################################################################
 
 add_subdirectory(libs/QtSolutions)
+add_subdirectory(libs/Assert)
 add_subdirectory(libs/Error_Core)
 add_subdirectory(libs/Error_Widgets)
 add_subdirectory(libs/LibraryInfo_Core)
@@ -150,6 +151,7 @@ add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(libs/Translation_Core)
 add_subdirectory(libs/Translation_Widgets)
 add_subdirectory(libs/QueryExpression_Core)
+add_subdirectory(libs/QueryExpression_Reflection)
 add_subdirectory(libs/QueryExpression_Sql)
 add_subdirectory(libs/Sql_Core)
 add_subdirectory(libs/Sql_Core_SQLite)
@@ -161,6 +163,12 @@ add_subdirectory(libs/Railway_Core)
 add_subdirectory(libs/Railway_Sql)
 add_subdirectory(libs/Railway_Widgets)
 add_subdirectory(libs/Railway_QtQuick)
+add_subdirectory(libs/Railway_TaskList_Core)
+add_subdirectory(libs/Railway_TaskList_Sql)
+add_subdirectory(libs/Railway_TaskList_Widgets)
+add_subdirectory(libs/MemoryStore)
+add_subdirectory(libs/Reflection_Core)
+add_subdirectory(libs/Sql_Reflection)
 
 # include(MdtInstallQt5)
 
