ItemModel cached table models: + stress test

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ addItemModelTest("AbstractTableModelTest")
 addItemModelTest("AbstractCachedTableModelTest")
 addItemModelTest("PersonStorageTest")
 addItemModelTest("CachedTableModelTest")
+addItemModelTest("CachedTableModelStressTest")
 addItemModelTest("FormatMapTest")
 addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
