Container: implement IdPool

--- a/libs/Container/tests/CMakeLists.txt
+++ b/libs/Container/tests/CMakeLists.txt
@@ -36,3 +36,5 @@ addContainerTest("TableCacheTaskTest")
 addContainerTest("TableCacheOperationTest")
 addContainerTest("TableCacheTest")
 addContainerTest("VariantRecordTest")
+addContainerTest("IdPoolTest")
+addContainerTest("IdPoolBenchmark")
