--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -86,6 +86,7 @@ addSqlCoreTest("SimpleTypesTest")
 addSqlCoreTest("FieldNameTest")
 addSqlCoreTest("FieldNameValueMapTest")
 addSqlCoreTest("FieldNameValueMapBenchmark")
+addSqlCoreTest("RecordUtilsTest")
 addSqlCoreTest("PrimaryKeyRecordTest")
 # addSqlCoreTest("SelectFieldTest")
 addSqlCoreTest("ExpressionTest")
